Optimized code: refactered InfoExecutionPeriod and InfoExecutionYear to be wrappers of their domain counterparts.